added advanced search

--- a/app/src/main/res/layout/activity_parade_details.xml
+++ b/app/src/main/res/layout/activity_parade_details.xml
@@ -10,10 +10,12 @@
         android:id="@+id/paradeTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="Parade title"
         android:textAlignment="center"
-        android:textSize="30sp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
